# dg-transform

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
include/dragongem/llvm/: .clang-format  CanonicalId.h  ExecutableBasicBlock.h
src/: CMakeLists.txt
src/llvm/: CMakeLists.txt  CanonicalId.cpp  ExecutableBasicBlock.cpp
src/llvm/trace/: CLOpts.cpp  CLOpts.h  InstrumentInstTracePass.cpp  InstrumentInstTracePass.h  InstrumentSimpointPass.cpp  InstrumentSimpointPass.h  InstrumentTracePass.cpp  InstrumentTracer.h  Instrumentation.cpp  Instrumentation.h  InstrumentationInterface.cpp  InstrumentationInterface.h  Registry.cpp  TracePass.cpp
src/trace/: BBInterval.proto  CMakeLists.txt  InstTrace.proto  LLVMUID.proto  SimStats.proto
test/llvm/trace-simple/: a.out  trace_simple.cpp  trace_simple.ll
